--- a/.gitattributes
+++ b/.gitattributes
@@ -3,3 +3,5 @@ server_crt.yml filter=git-crypt diff=git-crypt
 server_key.yml filter=git-crypt diff=git-crypt
 *.ini filter=git-crypt diff=git-crypt
 *.pem filter=git-crypt diff=git-crypt
+secrets.yml filter=git-crypt diff=git-crypt
+secrets.yaml filter=git-crypt diff=git-crypt
