--- a/.gitattributes
+++ b/.gitattributes
@@ -2,6 +2,7 @@ secretfile filter=git-crypt diff=git-crypt
 server_crt.yml filter=git-crypt diff=git-crypt
 server_key.yml filter=git-crypt diff=git-crypt
 *.ini filter=git-crypt diff=git-crypt
+*.yml filter=git-crypt diff=git-crypt
 *.pem filter=git-crypt diff=git-crypt
 secrets.yml filter=git-crypt diff=git-crypt
 secrets.yaml filter=git-crypt diff=git-crypt
