--- a/.gitattributes
+++ b/.gitattributes
@@ -3,6 +3,7 @@ server_crt.yml filter=git-crypt diff=git-crypt
 server_key.yml filter=git-crypt diff=git-crypt
 *.ini filter=git-crypt diff=git-crypt
 *keyring filter=git-crypt diff=git-crypt
+*.sql filter=git-crypt diff=git-crypt
 *.yml filter=git-crypt diff=git-crypt
 *.pem filter=git-crypt diff=git-crypt
 secrets.yml filter=git-crypt diff=git-crypt
